Update .editorconfig @Mehrbsrn

--- a/.editorconfig
+++ b/.editorconfig
@@ -39,3 +39,4 @@ disabled_rules = filename
 # Indentation in Markdown files might not be constant, or a multiple of 2.
 # Prettier takes care of formatting Markdown files.
 indent_size = unset
+@mrhrbarn
